--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
               </button>
             </div>
           </div>
-          <ul id="taskList" class="list-group mt-3">
-            <button id="clearTaskBtn" class="btn btn-transparent w-100 border border-danger border-1 text-danger scale mt-3">
-              Clear All Tasks
-            </button>
-          </ul>
+          <ul id="taskList" class="list-group mt-3"></ul>
+          <button id="clearTaskBtn" class="btn btn-transparent w-100 border border-danger border-1 text-danger scale mt-3">
+            Clear All Tasks
+          </button>
         </div>
       </div>
     </main>
